--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,12 +49,9 @@ a {
   color: #00beff;
   text-decoration: none;
   transition: all 0.3s; }
-  a:hover {
-    text-decoration: none; }
-
-a:hover,
-a:focus {
-  color: #2f86d4; }
+  a:hover, a:focus {
+    color: #00beff;
+    text-decoration: underline; }
 
 p {
   margin-bottom: 20px;
@@ -101,6 +98,9 @@ li {
   list-style: none;
   margin: 0;
   padding: 0; }
+
+b, strong {
+  font-weight: bold; }
 
 label {
   display: block; }
@@ -585,60 +585,79 @@ header {
 
 .nav-menu {
   display: flex;
-  flex-flow: row nowrap;
   background-color: #e5e5e5;
   border-top: 7px solid;
-  width: 100%;
-  justify-content: space-between; }
-  @media (max-width: 580px) {
+  width: 100%; }
+  @media (max-width: 1200px) {
     .nav-menu {
-      flex-flow: wrap; } }
+      justify-content: space-between; } }
+  @media (max-width: 680px) {
+    .nav-menu {
+      flex-wrap: wrap;
+      border: none; } }
   .nav-menu li {
     text-align: center;
-    flex: 1 0 auto; }
+    border-right: 1px solid #bcbdc1;
+    width: 112px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
+    padding: 0 4px; }
     .nav-menu li a {
-      display: flex;
-      flex-flow: column;
       position: relative;
       color: #202b39;
       font-weight: 700;
-      border-right: 1px solid #bcbdc1;
-      padding: 14px 4px;
-      -webkit-justify-content: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      align-items: center;
+      padding: 0;
       height: auto;
       font-size: 14px;
       cursor: pointer; }
       .nav-menu li a svg {
-        height: 33px; }
+        height: 24px;
+        display: inline-block;
+        margin: 0;
+        padding: 0; }
+      .nav-menu li a label {
+        font-size: 13px;
+        line-height: normal;
+        margin: 0; }
       @media (max-height: 768px) {
         .nav-menu li a {
-          padding: 6px 2px;
+          padding: 9px 2px;
           font-size: 13px; } }
     .nav-menu li:first-child {
       width: 100%;
-      max-width: 175px;
-      background: #202733; }
-      @media (max-width: 580px) {
+      max-width: 155px;
+      background: #202733;
+      border-right: 1px solid #5c5c5f; }
+      @media (max-height: 768px) {
+        .nav-menu li:first-child {
+          max-width: 150px; } }
+      @media (max-width: 680px) {
         .nav-menu li:first-child {
           max-width: 100%; } }
       .nav-menu li:first-child a {
         background: #202733;
         height: 83px;
-        border-right: 1px solid #5c5c5f;
         padding: 9px 10px; }
         @media (max-height: 768px) {
           .nav-menu li:first-child a {
-            height: 65px; } }
+            height: 70px;
+            padding: 6px; } }
       .nav-menu li:first-child img {
         width: 128px;
-        margin: 0 auto; }
+        margin: 0 auto;
+        height: auto; }
     .nav-menu li img {
-      display: block; }
+      display: inline-block;
+      height: 26px;
+      margin: 0;
+      padding: 0;
+      margin-bottom: 4px; }
     .nav-menu li:last-child a {
-      border-right: none; }
+      border-right: none;
+      line-height: normal; }
     .nav-menu li.top-menu-active {
       background: #202733; }
       .nav-menu li.top-menu-active a {
@@ -647,33 +666,41 @@ header {
       .nav-menu li.top-menu-active img {
         filter: brightness(0) invert(1); }
   .nav-menu .global-search {
-    max-width: 340px;
-    padding: 0px 20px; }
+    width: 320px;
+    padding: 0px 10px; }
     @media (max-height: 768px) {
       .nav-menu .global-search {
-        padding: 6px 10px; } }
-    @media (max-width: 580px) {
+        padding: 6px;
+        width: 320px; } }
+    @media (max-width: 1200px) {
       .nav-menu .global-search {
-        padding: 0px 10px; } }
+        width: 100%; } }
+    @media (max-width: 680px) {
+      .nav-menu .global-search {
+        padding: 10px;
+        flex: 1; } }
+  .nav-menu .dropdown-menu a {
+    padding: 10px 12px; }
 
 .notification-new {
-  width: 18px;
-  height: 18px;
+  width: 16px;
+  height: 16px;
   color: #fff;
   background: red;
   position: absolute;
-  top: 6px;
+  top: -4px;
   left: 53%;
   border-radius: 20px;
   text-align: center;
   padding: 3px;
-  font-size: 12px;
-  line-height: 13px; }
+  font-size: 11px;
+  line-height: 12px; }
 
 .global-search {
   padding: 0 10px;
   display: flex;
-  align-items: center; }
+  align-items: center;
+  position: relative; }
   .global-search .search-filter {
     width: 100%;
     margin: 0;
@@ -681,7 +708,7 @@ header {
     border-radius: 22px;
     border: none;
     background-color: #fff;
-    padding: 1px 5px;
+    padding: 0px 10px;
     border: 1px solid #979797; }
     .global-search .search-filter input {
       text-align: left;
@@ -689,28 +716,57 @@ header {
       box-shadow: none;
       width: 100%;
       padding: 0;
-      border-radius: 22px; }
+      border-radius: 22px;
+      font-size: 12px; }
       @media (max-width: 1024px) {
         .global-search .search-filter input {
           font-size: 12px;
           line-height: 12px; } }
+      .global-search .search-filter input::-webkit-input-placeholder {
+        color: #666665; }
+      .global-search .search-filter input::-moz-placeholder {
+        color: #000; }
+      .global-search .search-filter input:-ms-input-placeholder {
+        color: #666665; }
+      .global-search .search-filter input:-moz-placeholder {
+        color: #000; }
   .global-search .search-icon {
     border: none;
-    width: 35px; }
+    width: 20px;
+    position: relative;
+    top: 3px;
+    margin-right: 8px; }
     .global-search .search-icon svg {
-      color: #ccc;
-      width: 18px;
-      padding-top: 5px; }
+      color: #999;
+      width: 18px; }
 
-.right-menu {
+.nav-menu .right-menu {
   width: 20px;
   max-width: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-left: 1px solid #bcbdc1; }
-  .right-menu a {
-    margin-right: 0; }
+  border-left: 1px solid #bcbdc1;
+  cursor: pointer; }
+  @media (max-width: 1200px) {
+    .nav-menu .right-menu {
+      width: 100px;
+      border: none; } }
+  .nav-menu .right-menu a {
+    margin-right: 0;
+    border: none; }
+
+.search-text-validation-error {
+  font-size: 11px;
+  line-height: 10px;
+  margin-top: 6px;
+  width: 100%;
+  text-align: center; }
+  @media (max-width: 1200px) {
+    .search-text-validation-error {
+      margin-top: 8px;
+      margin-left: 20px;
+      text-align: left; } }
 
 .black-top-menu {
   display: flex;
@@ -730,7 +786,7 @@ header {
       display: block; } }
   .black-top-menu .left-menu li {
     color: #fff;
-    margin-right: 5px;
+    margin-right: 15px;
     background: #202b39; }
     .black-top-menu .left-menu li:first-child {
       margin-right: 48px;
@@ -751,8 +807,10 @@ header {
       border-right: solid 1px #ccc; }
     .black-top-menu .left-menu li a {
       color: #fff; }
-      .black-top-menu .left-menu li a label:before {
-        border: 1px solid #fff; }
+      .black-top-menu .left-menu li a label {
+        font-size: 14px; }
+        .black-top-menu .left-menu li a label:before {
+          border: 1px solid #fff; }
     .black-top-menu .left-menu li.active-alert {
       background: #fff; }
       .black-top-menu .left-menu li.active-alert label {
@@ -767,30 +825,39 @@ header {
     @media (max-width: 580px) {
       .black-top-menu .checkbox-filter {
         margin-bottom: 10px; } }
-    .black-top-menu .checkbox-filter li {
-      margin-right: 32px; }
-      @media (max-width: 1024px) {
-        .black-top-menu .checkbox-filter li {
-          margin-right: 10px; } }
-      .black-top-menu .checkbox-filter li a {
-        color: #fff; }
-        .black-top-menu .checkbox-filter li a.filter-listing {
-          line-height: 16px;
-          display: flex;
-          align-items: center; }
-          .black-top-menu .checkbox-filter li a.filter-listing i {
-            font-size: 20px;
-            line-height: 0;
-            margin-left: 8px; }
-        .black-top-menu .checkbox-filter li a.btn {
-          padding: 6px 12px; }
-      .black-top-menu .checkbox-filter li:last-child {
-        padding-left: 32px;
-        border-left: 1px solid #ccc;
-        margin-right: 0; }
-        @media (max-width: 1024px) {
-          .black-top-menu .checkbox-filter li:last-child {
-            padding-left: 10px; } }
+    .black-top-menu .checkbox-filter li a {
+      color: #fff; }
+      .black-top-menu .checkbox-filter li a.filter-listing {
+        line-height: 16px;
+        display: flex;
+        align-items: center; }
+        .black-top-menu .checkbox-filter li a.filter-listing i {
+          font-size: 20px;
+          line-height: 0;
+          margin-left: 8px; }
+      .black-top-menu .checkbox-filter li a.btn {
+        padding: 6px 12px; }
+    .black-top-menu .checkbox-filter li:nth-child(2) {
+      padding-left: 20px;
+      border-left: 1px solid #ccc;
+      margin-left: 20px;
+      padding-right: 20px;
+      border-right: 1px solid #ccc;
+      margin-right: 20px;
+      height: 100%;
+      display: flex; }
+    .black-top-menu .checkbox-filter li .dropdown-menu a {
+      color: #202b39; }
+      .black-top-menu .checkbox-filter li .dropdown-menu a.newbuild-link {
+        background: #fff;
+        color: #727272; }
+
+.filter-listing {
+  position: relative; }
+  .filter-listing .dropdown-toggle::after {
+    position: relative;
+    top: 3px;
+    margin-left: 8px; }
 
 /*modal*/
 .modal.xl-popup .modal-dialog {
@@ -802,8 +869,8 @@ header {
 .modal.md-popup .modal-dialog {
   max-width: 550px;
   margin: 0 auto; }
-.modal .modal-dialog {
-  max-width: 100%; }
+/* .modal .modal-dialog {
+  max-width: 100%; } */
   .modal .modal-dialog .radio input + span:before {
     border-color: #9ea6b0; }
   .modal .modal-dialog .btn-grp {
@@ -1109,7 +1176,7 @@ header {
   .left-menu li {
     border: 0;
     background: #fff;
-    padding: 4px 8px 4px 3px;
+    padding: 4px 8px 4px 6px;
     margin-right: 10px;
     border-radius: 20px;
     display: inline-flex;
@@ -1165,7 +1232,7 @@ header {
     height: 100vh;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 0;
     left: -18px;
     overflow-x: hidden;
     transition: 0.5s; }
@@ -1215,7 +1282,7 @@ header {
   .sidebar .open-left-sidebar-nav {
     position: fixed;
     left: 0;
-    z-index: 2;
+    z-index: 0;
     background: #707883;
     border-left: solid 1px #949494;
     width: 50px;
@@ -1270,7 +1337,7 @@ header {
   transition: right 0.5s ease-out; }
   @media (max-height: 768px) {
     .right-nav {
-      top: 72px; } }
+      top: 77px; } }
   @media (max-width: 767px) {
     .right-nav {
       width: 100%;
@@ -1278,6 +1345,9 @@ header {
       overflow-y: scroll;
       overflow-x: hidden;
       padding-bottom: 72px; } }
+  @media (max-width: 680px) {
+    .right-nav {
+      top: 70px; } }
   .right-nav a {
     display: flex;
     align-items: center;
@@ -2144,33 +2214,39 @@ header {
 
 .whats-new.dropdown > a.dropdown-toggle:after {
   content: none; }
-.whats-new.dropdown .dropdown-menu {
+
+.dropdown-menu {
   border-radius: 0;
   margin-top: 0;
   border: 0;
   padding: 0;
-  width: 275px; }
-  .whats-new.dropdown .dropdown-menu a {
+  width: 220px; }
+  .dropdown-menu a {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-flow: row;
-    padding: 18px 20px;
+    padding: 10px 12px;
     background: #e5e5e5;
     font-size: 14px;
     color: #004978;
     border-bottom: 1px solid #b5b0b0;
     border-right: none; }
-    .whats-new.dropdown .dropdown-menu a.newbuild-link {
+    .dropdown-menu a.newbuild-link {
       background: #fff;
       color: #727272; }
-  .whats-new.dropdown .dropdown-menu .fa-play-circle-o {
+  .dropdown-menu .fa-play-circle-o {
     color: #00beff;
     font-size: 1.7em; }
-  .whats-new.dropdown .dropdown-menu .fa-chain {
+  .dropdown-menu .fa-chain {
     transform: rotate(90deg);
     color: #000;
     font-size: 20px; }
+
+.dropdown-toggle::after {
+  border-top: 6px solid;
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent; }
 
 .confi-page {
   padding: 10px; }
@@ -2454,12 +2530,12 @@ header {
     background-image: -webkit-gradient(linear, right bottom, left top, color-stop(0, rgba(16, 14, 90, 0)), to(#100e5a));
     background-image: -o-linear-gradient(bottom right, rgba(16, 14, 90, 0) 0, #100e5a 100%);
     background-image: linear-gradient(to top left, rgba(16, 14, 90, 0) 0, #100e5a 100%);
-    opacity: .84; }
+    opacity: 0.84; }
   .section:after {
-    background-image: url("../img/noise-light-small.png");
+    background-image: url("../images/noise-light-small.png");
     background-position: 50%;
     background-size: 96.5px 96.5px; }
-  @media (max-width: 767px) {
+  @media (max-width: 768px) {
     .section {
       height: 100%;
       padding: 25px; } }
@@ -2467,22 +2543,25 @@ header {
     color: #fff;
     z-index: 2;
     width: 50%; }
-    @media (max-width: 767px) {
+    @media (max-width: 768px) {
       .section .left-div {
         width: 100%;
         display: none; } }
   .section .build-features {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
     color: #fff;
     position: relative;
     left: 90px;
     display: inline-block;
     font-weight: 300; }
+    @media (max-width: 1024px) {
+      .section .build-features {
+        left: 20px; } }
     .section .build-features h1 {
       font-size: 36px;
       color: #fff;
       font-weight: 300;
-      font-family: 'Roboto Condensed', sans-serif;
+      font-family: "Roboto Condensed", sans-serif;
       border-bottom: solid 1px #e9e9e9;
       display: inline-block;
       margin-bottom: 40px; }
@@ -2493,7 +2572,7 @@ header {
         margin-bottom: 25px;
         list-style: disc; }
     .section .build-features .learn-more {
-      font-family: 'Roboto Condensed', sans-serif;
+      font-family: "Roboto Condensed", sans-serif;
       font-size: 22px;
       line-height: 22px;
       width: 170px;
@@ -2528,14 +2607,15 @@ header {
           color: #d3d3d3;
           border: none;
           box-shadow: none;
-          padding-left: 15px; }
+          width: 50px; }
         .section .right-div .inner-right .custom-input-group input {
           border-radius: 0;
           border: none;
           box-shadow: none;
           height: 52px;
           font-size: 1rem;
-          width: 100%; }
+          width: 100%;
+          padding-left: 0; }
       .section .right-div .inner-right .error-text {
         color: #ffb644;
         font-size: 15px;
@@ -2552,7 +2632,7 @@ header {
         font-size: 20px; }
       .section .right-div .inner-right p {
         margin: 0;
-        padding: 15px 0;
+        padding: 15px 0 0;
         font-size: 15px;
         text-align: left; }
       .section .right-div .inner-right .network-info {
@@ -2571,29 +2651,35 @@ header {
             padding: 0 5px; }
           .section .right-div .inner-right .network-info p .apple-icon {
             font-size: 25px;
-            color: #B2B7BB; }
+            color: #fff;
+            position: relative;
+            top: 1px; }
           .section .right-div .inner-right .network-info p:first-child {
             font-size: 15px;
             margin-bottom: 10px; }
+      .section .right-div .inner-right .forgotpw {
+        margin-bottom: 17px; }
+        .section .right-div .inner-right .forgotpw p {
+          margin-bottom: 4px;
+          padding: 0;
+          font-size: 14px;
+          line-height: 20px;
+          color: #ffb644; }
 
-.forgot img {
-  max-width: 280px; }
 .forgot .forgot-text {
-  margin: 3em 0;
-  text-align: center; }
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif; }
   .forgot .forgot-text h3 {
+    font-size: 24px;
     color: #fff; }
   .forgot .forgot-text h5 {
-    color: #a8a8a9;
-    margin: 2em 0;
-    font-size: 19px; }
+    color: #fff;
+    font-size: 16px;
+    font-weight: 300;
+    margin-top: 15px; }
 
 .reset .input-group {
   margin-bottom: 15px; }
-.reset .login-submit {
-  font-style: italic; }
-.reset input {
-  font-style: italic; }
 
 .term-conditions {
   background: #202b39;
@@ -2665,5 +2751,48 @@ header {
         .eula-agreement .agreement-sec .information ol li {
           list-style-type: lower-alpha;
           padding-left: 10px; }
+
+.brand-advertiser-list {
+  position: absolute;
+  background: #fff;
+  color: #000;
+  padding: 6px;
+  right: 0;
+  top: 28px;
+  width: 150px;
+  box-shadow: 0 0px 1px 2px rgba(0, 0, 0, 0.2);
+  z-index: 9;
+  display: none; }
+  .brand-advertiser-list .sub-brand-list {
+    background: #fff;
+    margin-left: 0; }
+    .brand-advertiser-list .sub-brand-list a {
+      color: #333;
+      font-size: 14px;
+      padding: 4px;
+      display: flex;
+      align-items: center; }
+
+.save-list i {
+  margin-left: 8px; }
+
+#authypopup .modal-dialog {
+  max-width: 440px;
+  margin: 0 auto; }
+
+.tokenMsg p {
+  margin-bottom: 15px;
+  color: #00529b;
+  font-size: 14px; }
+.tokenMsg > div {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center; }
+  .tokenMsg > div label {
+    width: 150px;
+    display: inline-block; }
+  .tokenMsg > div input {
+    padding: 4px 8px;
+    width: 100%; }
 
 /*# sourceMappingURL=main.css.map */
