User section with new angular ui grid -3

--- a/templates/userAccount.html
+++ b/templates/userAccount.html
@@ -19,4 +19,4 @@
             </ul>
         </nav>
     </div>
-    <div id="gridUser" ui-grid="gridOptions1" ui-grid-exporter ui-grid-selection class="grid"></div>
+    <div id="gridUser" ui-grid="gridOptionsUser" ui-grid-edit ui-grid-exporter ui-grid-selection class="grid"></div>
