--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2815,3 +2815,42 @@ header {
 }
 
 /*# sourceMappingURL=main.css.map */
+.grid {
+  height: 550px;
+}
+.ui-grid-viewport .ui-grid-cell-contents {
+  word-wrap: break-word;
+  white-space: normal !important;
+   overflow:visible;
+}
+
+.ui-grid-cell {
+    display : table-cell;
+    height: auto !important;
+    overflow:visible;
+    position: static;
+}
+
+.ui-grid-row {
+  height: auto !important;
+  display : table-row;
+  position: static;
+}
+
+.ui-grid-row div[role=row] {
+  display: flex ;
+  align-content: stretch;
+}
+
+.ui-grid-header-cell .ui-grid-cell-contents {
+  height: 48px;
+  white-space: normal;
+  -ms-text-overflow: clip;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  overflow: visible;
+}
+
+.ui-grid-cell.overflow-visible {
+  overflow: visible;
+}
