--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -465,20 +465,16 @@ table.dataTable.display tbody tr:hover>.sorting_1 {
     color: #00beff;
     text-decoration: underline;
 }
-.user-not-verified {
+
+.user-not-verified, .user-not-verified-authy {
     color: #fff;
     background-color: #d55755;
-    padding: 7px;
-}
-.user-not-verified-authy {
-    color: #fff;
-    background-color: #d55755;
-    padding: 7px;
+    padding: 2px 4px;
 }
 .user-verified {
     color: #fff;
     background-color: green;
-    padding: 6px;
+    padding: 2px 4px;
 }
 .user-not-verified-link {
     color: #00beff;
@@ -486,7 +482,7 @@ table.dataTable.display tbody tr:hover>.sorting_1 {
     padding-left: 0.5em;
     cursor: pointer;
     white-space: nowrap;
-    font-size: 13px;
+    font-size: 12px;
     position: absolute;
 }
 /*Admin modal*/
@@ -1468,36 +1464,7 @@ input[type="radio"].radio-custom {
     border-bottom: 1px solid #f0f0f0;
     padding: 1em 0;
 }
-/* .radio-custom-checkbox + .radio-custom-checkbox-label:before {
-    font-size: 0.9em;
-    content: '';
-    background-color: #fff;
-    border: 1px solid #9ea6b0;
-    display: inline-block;
-    vertical-align: middle;
-    width: 1.6em;
-    height: 1.6em;
-    padding: 0;
-    border-radius: 5px;
-    margin-right: 0.5em;
-    text-align: center;
-}
-.checkbox-custom + .checkbox-custom-label:before {
-    font-size: 0.9em;
-    content: '';
-    background-color: #fff;
-    border: 1px solid #9ea6b0;
-    display: inline-block;
-    vertical-align: middle;
-    width: 1.6em;
-    height: 1.6em;
-    padding: 0;
-    border-radius: 5px;
-    margin-right: 1em;
-    margin-top: 2px;
-    text-align: center;
-    float: left;
-} */
+
 
 .newcheck .checkbox-custom + .checkbox-custom-label:before {
     margin-top: -2px;
@@ -1505,25 +1472,11 @@ input[type="radio"].radio-custom {
 .sub-checkbox .checkbox-custom + .checkbox-custom-label:before {
     border-radius: 4px;
 }
-/* .checkbox-custom:checked + .checkbox-custom-label:before,
-.radio-custom-checkbox:checked + .radio-custom-checkbox-label:before {
-    border: 1px solid #9ea6b0;
-    content: '\f00c';
-    font-family: 'FontAwesome';
-    color: #fff;
-    background-color: #1a191a;
-} */
+
 .excel-popup .checkbox-custom:checked + .checkbox-custom-label:before {
     padding-top: 3px;
 }
-input[type="checkbox"].checkbox-custom,
-/* input[type="radio"].radio-custom-checkbox, */
-.network-content input[type="radio"].radio-custom {
-    opacity: 0;
-    position: absolute;
-    width: 1.6em;
-    height: 1.6em;
-}
+
 input[type="checkbox"].checkbox-custom {
     margin-top: 4px;
 }
@@ -3557,13 +3510,6 @@ input[type='text'].searchRefine {
     margin-right: 1em;
 }
 
-/* Checkbox */
-.checkbox-normal .checkbox-custom + .checkbox-custom-label:before{
-    margin-top: 0;
-}
-.checkbox-normal {
-    padding-right: 2.5em;
-}
 .new-filter-check .checkbox-custom-label, #modal-content .radio-custom-checkbox-label, .response_dropdown .custom-div {
     color: #fff;
 }
